[build-system]
requires = ["scikit-build-core", "wheel", "numpy==2.2.5", "pybind11==2.10.4"]
build-backend = "scikit_build_core.build"

[project]
name = "mettagrid"
version = "0.1.6"
description = "A fast grid-based open-ended MARL environment"
authors = [{ name = "David Bloomin", email = "daveey@gmail.com" }]
requires-python = "==3.11.7"
license = "MIT"
readme = "README.md"
urls = { Homepage = "https://daveey.github.io", Repository = "https://github.com/Metta-AI/mettagrid" }
keywords = [
    "gridworld",
    "minigrid",
    "rl",
    "reinforcement-learning",
    "environment",
    "gym",
]
dependencies = [
    "boto3==1.38.23",
    "botocore==1.38.29",
    "duckdb==1.2.0",
    "filelock==3.18.0",
    "gymnasium==1.1.1",
    "hydra-core==1.4.0.dev1",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "omegaconf==2.4.0.dev3",
    "pandas==2.2.3",
    "pettingzoo==1.25.0",
    "pydantic==2.11.5",
    "pufferlib",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "scipy==1.15.3",
    "tabulate==0.9.0",
    "termcolor==2.4.0",
    "tqdm==4.67.1",
    "wandb==0.19.11",
]

[tool.scikit-build]
# `release-no-tests` is faster than `release` preset.
# `pip install` builds are done in isolated environment, so tests and benchmarks are not built here.
# See `./README.md` for more details.
cmake.args = ["--preset", "release-no-tests"]

# Configuring pytest here causes us to ignore metta/conftest.py

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.uv.sources]
pufferlib = { git = "https://github.com/Metta-AI/PufferLib.git", rev = "d3cde3f4107daaf8e195bf87f55742d7cd026ddb" }
