[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "softmax"
version = "0.0.1"
description = "Softmax utilities and MCP servers"
requires-python = ">=3.11.7"
dependencies = ["metta-common"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["metta.softmax"]

[tool.setuptools.package-data]
"metta" = ["__init__.py"]
"metta.softmax" = ["py.typed"]


[tool.uv.sources]
metta-common = { workspace = true }
