[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "softmax"
version = "0.0.1"
description = "Softmax utilities and MCP servers"
requires-python = ">=3.11.7"
dependencies = [
  "pyyaml>=6.0.2",
  "fastapi>=0.115.5",
  "httpx>=0.28.1",
  "mcp[cli]>=1.13.1",
  "boto3>=1.38.32",
  "metta-common",
  "typer>=0.16.1",
  "datadog-api-client>=2.43.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
metta-common = { workspace = true }
