[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wandb_carbs"
version = "0.0.8"
description = "Integrates Imbue's Cost Aware pareto-Region Bayesian Search (CARBS) with Weights and Biases (WanDB)"
authors = [{ name = "David Bloomin", email = "daveey@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "bayesian-optimization",
    "bayesian-search",
    "cost-aware",
    "pareto-region",
    "carbs",
    "wandb",
    "weights-and-biases",
]
requires-python = ">=3.10,<4.0"
dependencies = ["carbs>=0.0.1", "wandb>=0.16"]

[project.optional-dependencies]
test = ["pytest>=6.2.4"]

[tool.setuptools]
include-package-data = true
