[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-webhook-service"
version = "0.1.0"
description = "GitHub webhook service for syncing PRs with Asana"
authors = [{ name = "Metta AI" }]
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "asana>=5.2.2",
    "boto3>=1.38.32",
    "fastapi>=0.115.5",
    "httpx>=0.28.1",
    "mangum>=0.18.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.34.2",
]

[tool.setuptools.packages.find]
where = ["src"]

