[project]
name = "codebot"
version = "0.1.0"
description = "AI-powered development assistance through a unified CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-ai>=0.0.12",
    "pydantic>=2.0.0",
    "click>=8.0",
    "pathlib2>=2.3.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
codebot = "codebot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["codebot"]

[tool.hatch.build.targets.wheel]
packages = ["codebot"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
